k8s/finance-demo/demo-app/sh-mock/sh-mock-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sh-mock
spec:
  selector:
    app: sh-mock
  ports:
    - port: 8081
      targetPort: 8081
